<resources>
    <string name="app_name">MoneyManager</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transactions">Sổ giao dịch</string>
    <string name="menu_debts">Sổ nợ</string>
    <string name="menu_budgets">Thống kê</string>
    <string name="menu_sign_out">Đăng xuất</string>
    <string name="et_email">Email</string>
    <string name="et_username">Tên người dùng</string>
    <string name="et_password">Mật khẩu</string>
    <string name="btn_register">Đăng ký</string>
    <string name="txt_register">Bạn đã có tài khoản? Đăng nhập</string>
    <string name="txt_create_account">Tài Khoản Mới</string>
    <string name="btn_sign_in">Đăng nhập</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="past">THÁNG TRƯỚC</string>
    <string name="now">THÁNG NÀY</string>
    <string name="future">THÁNG SAU</string>
    <string name="txt_null_transaction">Không có giao dịch</string>
    <string name="txt_null_transaction_small">Chạm + để thêm</string>
    <string name="title_add">Thêm giao dịch</string>
    <string name="btn_save">Lưu</string>
    <string name="item_save">Lưu</string>
    <string name="title_add_toolbar">Thêm giao dịch</string>
    <string name="hint_note">Thêm ghi chú</string>
    <string name="hint_category_service">Chọn nhóm dịch vụ</string>
    <string name="txt_cost">0 VND</string>
    <string name="hint_wallet">Nhập tên ví</string>
    <string name="txt_friend">Với</string>
    <string name="txt_add_event">Chọn sự kiên</string>
    <string name="txt_clock_add">Đặt nhắc nhở</string>
    <string name="hint_event">Chọn ngày tạo</string>
    <string name="title_service">Chọn dịch vụ</string>
    <string name="item_search">Search</string>
    <string name="debets"><![CDATA[Đi vay & Cho vay]]></string>
    <string name="cost">Khoản chi</string>
    <string name="revenue">Khoản thu</string>
    <string name="txt_get_debets">Đi vay</string>
    <string name="txt_get_money">Thu nợ</string>
    <string name="txt_give_money">Cho vay</string>
    <string name="txt_give_debets">Trả nợ</string>
    <string name="txt_food">Ăn uống</string>
    <string name="txt_bill"><![CDATA[Hóa đơn & Tiện ích]]></string>
    <string name="txt_move">Di chuyển</string>
    <string name="txt_shopping">Mua sắm</string>
    <string name="txt_love"><![CDATA[Bạn bè & Người yêu]]></string>
    <string name="txt_game">Giải trí</string>
    <string name="txt_travel">Du lịch</string>
    <string name="txt_health">Sức khỏe</string>
    <string name="txt_gift">Quà tặng</string>
    <string name="txt_family">Gia đình</string>
    <string name="txt_education">Giáo dục</string>
    <string name="txt_investment">Đầu tư</string>
    <string name="txt_withdrawal">Rút tiền</string>
    <string name="txt_get_rewards">Thưởng</string>
    <string name="txt_interest_rate">Tiền lãi</string>
    <string name="txt_salary">Lương</string>
    <string name="txt_money">Được tặng</string>
    <string name="txt_sale">Bán đồ</string>
    <string name="menu_wallet">Ví tiền</string>
    <string name="txt_add_debets">Thu nợ</string>
    <string name="txt_reduce_debets">Trả nợ</string>
</resources>
