<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:id="@+id/group_transactions">
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_account_balance_wallet_black"
            android:title="@string/menu_transactions" />
    </group>
    <group android:id="@+id/group_debts">
        <item
            android:id="@+id/nav_debts"
            android:icon="@drawable/ic_monetization_on_black"
            android:title="@string/menu_debts" />
    </group>
    <group android:id="@+id/group_budgets">
        <item
            android:id="@+id/nav_budgets"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_budgets" />
    </group>

    <group android:id="@+id/group_sign_out">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_app_black"
            android:title="@string/menu_sign_out" />
    </group>

</menu>
