<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorGreenLight">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:errorEnabled="true"
        android:background="@color/colorGreenLight">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            android:background="@color/colorGreenLight"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_below="@id/til_email"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        android:background="@color/colorGreenLight"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:background="@color/colorGreenLight"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorGreenDark"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/btn_sign_in"
        android:textColor="@android:color/white"
        android:layout_below="@id/til_password"
        android:layout_marginTop="10dp"
        app:cornerRadius="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorGreenLight"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth="2dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/btn_register"
        android:textColor="@android:color/black"
        android:layout_below="@id/btn_sign_in"
        android:layout_marginTop="10dp"
        app:cornerRadius="10dp"/>

</RelativeLayout>